Created User Model in Database

--- a/src/AngularAuthAPI/AngularAuthAPI/appsettings.json
+++ b/src/AngularAuthAPI/AngularAuthAPI/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DbConnStr": "Server=PREDATOR-HELIOS; Database=AuthAPIDb; User=sa; Password=Soname@1; TrustServerCertificate=True;"
     }
-  },
-  "AllowedHosts": "*"
 }
