Made changes to tsconfig and appsettings.

--- a/src/AngularAuthAPI/AngularAuthAPI/appsettings.json
+++ b/src/AngularAuthAPI/AngularAuthAPI/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DbConnStr": "Server=PREDATOR-HELIOS; Database=AuthAPIDb; User=sa; Password=Soname@1; TrustServerCertificate=True;"
+        "DbConnStr": "Data Source=XINMBDLNDQRT; Database=AuthAPIDb; User=sa; Password=Soname@1; TrustServerCertificate=True;"
     }
 }
